[package]
name = "tzf-cf"
version = "0.1.0"
edition = "2021"
authors = [ "ringsaturn <ringsaturn.me@gmail.com>" ]
resolver = "2"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4", features=['http'] }
worker-macros = { version="0.3.4", features=['http'] }
# tzf-rs = { version = "0.4.8", default-features = false }
tzf-rs = { git =  "https://github.com/ringsaturn/tzf-rs", rev = "3a82e5d", default-features = false}
lazy_static = "1.5.0"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.209", features = ["derive"] }
axum  = {version = "0.7", default-features = false, features = ["query"]}
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4"
reqwest = "0.12.7"
